# openfoam

./: .dockerignore  .gitignore  .gitmodules  Brewfile  Brewfile_v2112  Brewfile_v2412  configure.sh  configure_v2412.sh  install.sh  install_v2112.sh  install_v2412.sh  makefile  readme.md
.github/: FUNDING.yml
cli/: pyproject.toml  setup.cfg  setup.py
cli/completions/bash/: openfoam  phynexis-foam
cli/openfoam/: __init__.py  _openfoam  cli.py  completion.bash  completion.zsh  dev_tree.sh  docker_run.sh  manifest.sh  native.sh  openfoam.sh  prefix.py  prefix.sh  shell_bashrc.sh  shell_prompt.sh
cli/openfoam_cli/: cli.py  completion.bash  completion.zsh  docker_run.sh  native.sh  openfoam.sh  prefix.py  prefix.sh  shell_bashrc.sh  shell_prompt.sh
cli/phynexis_foam/: __init__.py  _phynexis-foam  cli.py  completion.bash  completion.zsh  docker_run.sh  manifest.sh  native.sh  phynexis-foam.sh  prefix.py  prefix.sh  shell_bashrc.sh
docker/: Dockerfile  Dockerfile.build  apt_setup.sh  bake_openfoam.sh  build_in_container.sh  compile_openfoam.sh  entrypoint.sh  install_build_deps.sh  openfoam_install_excludes.sh  openfoam_runtime_install.sh  phynexis_build_install.sh  phynexis_build_packages.txt  require_host.sh  resolve_runtime_apt.sh  rewrite_openfoam_paths.sh  root.bashrc  setup_base_image.sh  setup_build_image.sh  setup_openfoam_image.sh  stage_openfoam.sh  verify_build_image.sh  verify_openfoam_image.sh
docs/: make-config-default.mk  make-config-user.mk.example
meta/: docker-build.linux.prefs.sh
scripts/: build_openfoam.sh  bundle_fix_rpath.sh  bundle_openfoam_runtime.sh  bundle_openmpi_discover.sh  bundle_openmpi_extras.sh  check_deps.sh  cli_pack.sh  cli_wheel.sh  ensure_bundled_libpmix.sh  install_bundled_mpi_wrappers.sh  install_deps.sh  install_dist_bashrc.sh  install_openfoam_cli.sh  install_openfoam_prefix.sh  linux_build_packages.txt  load_make_config.sh  openfoam_build_meta.sh  openfoam_build_paths.sh  (+21 more)
(+6 files in other folders)
