[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfoam"
version = "2412"
description = "OpenFOAM install and command-line tools"
requires-python = ">=3.7"

[project.scripts]
openfoam = "openfoam.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfoam"]

[tool.setuptools.package-data]
openfoam = [
  "openfoam.sh",
  "prefix.sh",
  "prefix.py",
  "native.sh",
  "docker_run.sh",
  "shell_prompt.sh",
  "shell_bashrc.sh",
  "dev_tree.sh",
  "_openfoam",
  "completion.bash",
  "completion.zsh",
  "openfoam-prefix.tar.gz",
]
