[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phynexis-foam"
version = "2412"
description = "OpenFOAM install and command-line tools"
requires-python = ">=3.7"

[project.scripts]
phynexis-foam = "phynexis_foam.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phynexis_foam"]

[tool.setuptools.package-data]
phynexis_foam = [
  "phynexis-foam.sh",
  "prefix.sh",
  "prefix.py",
  "native.sh",
  "docker_run.sh",
  "shell_prompt.sh",
  "shell_bashrc.sh",
  "rewrite_openfoam_paths.sh",
  "manifest.sh",
  "manifest.json",
  "_phynexis-foam",
  "completion.bash",
  "completion.zsh",
]
